2007-09-27  Vitaly Alexeev <tishka92@yahoo.com>
		* gameswf/gameswf_object.*
		Fixed as_object::watch()

2007-09-26  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_as_sprite.cpp
		* gameswf/gameswf_as_sprite.h
		* gameswf/gameswf_sprite.cpp
		* gameswf/gameswf_sprite.h
		* gameswf/gameswf_sprite_def.h
		* gameswf/samples/test_attachMovie.fla
		* gameswf/samples/test_attachMovie.swf
		Added attachMovie() method
		
2007-09-25  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_dlist.cpp
		* gameswf/gameswf_dlist.h
		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_environment.h
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_object.h
		* gameswf/gameswf_root.cpp
		* gameswf/gameswf_root.h
		* gameswf/gameswf_sprite.cpp
		* gameswf/gameswf_sprite.h
		Optimized garbage collector, removed collect_garbage() interface,
		garbage collector is combined with advance(). It does not cover all cases,
		but is sufficient for real games.

2007-09-22  Vitaly Alexeev <tishka92@yahoo.com>

		* base/tu_file.h
		* gameswf/gameswf.h
		* gameswf/gameswf_movie_def.cpp
		* gameswf/gameswf_processor.cpp
		* gameswf/gameswf_test_ogl.cpp
		* gameswf/win32/VC8/gameswf.sln
		* gameswf/win32/VC8/gameswf_processor.vcproj
		Reanimeted gameswf_processor

2007-09-22  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_as_classes/as_mcloader.cpp
		* gameswf/gameswf_root.cpp
		* gameswf/gameswf_root.h
		A bit cleanup
		
2007-09-22  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_function.cpp
		* gameswf/gameswf_sprite.h
		Fixed ASSetPropFlags,
		as_as_function should use the environment of 'this_ptr' if it is

2007-09-21  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_dlist.cpp
		* gameswf/gameswf_dlist.h
		* gameswf/gameswf_sprite.cpp
		* gameswf/gameswf_sprite.h
		added dump() stuff for debugging
