@@ -1534,11 +1534,10 @@ namespace gameswf
 
 						// Call the actual constructor function; new_obj is its 'this'.
 						// We don't need the function result.
-						// env->m_instance is used to pass object pointer to constructor chain
-						env->m_instance = new_obj_ptr.get_ptr();
+						// pass the pointer of new instance of class to constructor chain
+						new_obj_ptr->set_this(new_obj_ptr.get_ptr());
 						call_method(constructor, env, new_obj_ptr.get_ptr(), nargs, env->get_top_index());
-						env->m_instance = NULL;
-
+						new_obj_ptr->set_this(NULL);
 						new_obj.set_as_object_interface(new_obj_ptr.get_ptr());
 					}
 					else
