@@ -51,11 +51,6 @@ namespace gameswf
 		as_value	m_global_register[GLOBAL_REGISTER_COUNT];
 		array<as_value>	m_local_register;	// function2 uses this
 		character*	m_target;
-
-		// this is used in 'new' (0x40 opcode) to pass
-		// new created object pointer to constructor chain
-		smart_ptr<as_object>	m_instance;
-
 		stringi_hash<as_value>	m_variables;
 
 		// For local vars.  Use empty names to separate frames.
@@ -69,9 +64,7 @@ namespace gameswf
 		};
 		array<frame_slot>	m_local_frames;
 
-		as_environment() :
-			m_target(NULL),
-			m_instance(NULL)
+		as_environment() : m_target(NULL)
 		{
 		}
 
