@@ -1,3 +1,13 @@
+2007-09-29  Vitaly Alexeev <tishka92@yahoo.com>
+		* gameswf/gameswf.h
+		* gameswf/gameswf_action.cpp
+		* gameswf/gameswf_environment.h
+		* gameswf/gameswf_function.cpp
+		* gameswf/gameswf_object.cpp
+		* gameswf/gameswf_object.h
+		The next attempt to fixed 'this' bug in
+		as_as_function::operator()
+
 2007-09-27  Vitaly Alexeev <tishka92@yahoo.com>
 		* gameswf/gameswf_object.*
 		Fixed as_object::watch()
